--- a/heroku.yml
+++ b/heroku.yml
@@ -2,6 +2,8 @@
 # Officially unsupported, but works.
 
 build:
+  docker:
+    web: Dockerfile
   
 run:
   web: ./esocks -DINBOUND_PORT=$PORT -DINBOUND_PACKAGE=wsheader
