--- a/heroku.yml
+++ b/heroku.yml
@@ -8,4 +8,4 @@ build:
 #    web: Dockerfile
   
 run:
-  web: /opt/esocks/esocks -DINBOUND_PORT=$PORT -DINBOUND_PACKAGE=wsheader
+  web: ./esocks -DINBOUND_PORT=$PORT -DINBOUND_PACKAGE=wsheader
