--- a/kubernetes/esocks-app.yaml
+++ b/kubernetes/esocks-app.yaml
@@ -1,3 +1,7 @@
+#
+#参见 https://okteto.com/docs/cloud/okteto-pipeline/
+# kubernetes 目录会自动检测 ,并执行  kubectl apply on the folder.
+#
 apiVersion: v1
 kind: Service
 metadata:
